Fixed alignment of raced in fleets in Spectator.html

--- a/java/com.sap.sailing.gwt.ui/Spectator.css
+++ b/java/com.sap.sailing.gwt.ui/Spectator.css
@@ -191,7 +191,8 @@ input.magnifier {
 	margin: 5px 5px 5px 0;
 	text-decoration: none;
   	font-family: 'Open Sans', Arial, Verdana, sans-serif;
-    font-weight: 600
+    font-weight: 600;
+    box-sizing: content-box;
 }
 
 .leaderboardGroupPanel-BoatClass {
